min-cluster-allinone/min-cluster-elk/ingress-es-min-c0-kibana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: biz
  labels:
    app: kibana
  name: es-min-c0-kibana
  namespace: kibana
spec:
  rules:
  #- host: es-min-c0.kibana.future.com
  - host: es-min-c0-kibana
    http:
      paths:
      - backend:
          serviceName: es-min-c0-kibana-kibana
          servicePort: 5601
        path: /
